--- a/src/ui/AddGame.fxml
+++ b/src/ui/AddGame.fxml
@@ -79,11 +79,11 @@
             </ImageView>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <children>
-                  <TableView layoutX="-76.0" layoutY="-32.0" prefHeight="253.0" prefWidth="274.0" translateY="10.0">
+                  <TableView fx:id="AddGameTableView" layoutX="-76.0" layoutY="-32.0" prefHeight="253.0" prefWidth="274.0" translateY="10.0">
                     <columns>
-                      <TableColumn prefWidth="92.0" text="Code" />
-                      <TableColumn prefWidth="78.0" text="Price" />
-                        <TableColumn prefWidth="103.0" text="Quantity" />
+                      <TableColumn fx:id="codeColumn" prefWidth="92.0" text="Code" />
+                      <TableColumn fx:id="priceColumn" prefWidth="78.0" text="Price" />
+                        <TableColumn fx:id="quantityColumn" prefWidth="103.0" text="Quantity" />
                     </columns>
                   </TableView>
                   <Button mnemonicParsing="false" onAction="#addGameToShelf" text="Add" translateX="25.0" translateY="238.0" />
@@ -93,7 +93,7 @@
       </GridPane>
    </center>
    <bottom>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane style="-fx-background-color: Black;" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
