--- a/src/ui/gameOrderPane.fxml
+++ b/src/ui/gameOrderPane.fxml
@@ -6,12 +6,12 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <TableView fx:id="gameOrderTableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="gameOrderClientColumn" prefWidth="298.0" text="Client Code" />
-          <TableColumn fx:id="gameOrderGameColumn" prefWidth="301.0" text="Game Order" />
+          <TableColumn fx:id="gameOrderGameColumn" prefWidth="258.0" text="Game Order" />
         </columns>
       </TableView>
    </center>
